<resources>
    <string name="app_name">ProiectAndroid</string>
    <string name="HomeBanking">HomeBanking</string>
    <string name="enterUserName">Enter your user name . . .</string>
    <string name="user">User</string>
    <string name="enterPassword">Enter your password . . .</string>
    <string name="password">Password</string>
    <string name="password1">password</string>
    <string name="Register">Register</string>
    <string name="signin">Sign in</string>
    <string name="notaccount">You haven\'t account?</string>
    <string name="signup">Sign Up</string>
    <string name="enterEmailAdress">Enter your email adress . . .</string>
    <string name="email">Email</string>
    <string name="account">You have account?</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="push_alerts">alerte push</string>
    <string name="banca_pay">banca pay</string>
    <string name="label_client_name">nume</string>
    <string name="label_client_CNP">CNP</string>
    <string name="label_data_emitere_CI">Data emitere</string>
    <string name="label_data_expirare_CI">Data expirare</string>
    <string name="label_client_prenume">prenume</string>
    <string name="serie_CI">Seria</string>
    <string name="numar_CI">Numarul</string>
    <string name="nume">Nume</string>
    <string name="prenume">Prenume</string>
    <string name="hint_CNP">XYYMMDD******</string>
    <string name="birth_place">locul nasterii</string>
    <string name="label_venit">venit</string>
    <string name="ocupatie_principala">ocupatie principala</string>
    <string name="companie_client">companie</string>
    <string name="tara_rezidente">tara de rezidenta fiscala</string>
    <string name="detalii_tranzactionale">detalii tranzactionale</string>
    <string name="telefon">telefon</string>
    <string name="not_empy">field should not be empty</string>
    <string name="invalid_email">invalid email format</string>
    <string name="invalid_phone_number">invalid phone number format</string>
    <string name="invalid_name">invalid name format</string>
    <string name="invalid_date">invalid date format</string>
    <string name="invalid_series">invalid series format</string>
    <string name="ivalid_series_number">invalid series number format</string>
    <string name="invalid_CNP">invalid CNP format</string>
    <string name="invalid_income">"only digits "</string>
    <string name="sold_curent_euro">Sold Curent Euro</string>
    <string name="economii">Economii</string>
    <string name="_5_000_euro">5 000 EURO</string>
    <string name="cont_curent_euro">cont curent Euro</string>
    <string name="ContCurentLei" />
    <string name="enterContCurent">20000 lei</string>
    <string name="bani">bani</string>
    <string name="sac">sac</string>
    <string name="CodClient">Cod Client</string>
    <string name="enterCodClient">Introduceti Codul . . .</string>
    <string name="enteryouremail">Enter your email . . .</string>
    <string name="transaction_type">Tipul tranzactiei</string>
    <string name="Comerciant">Comerciant</string>
    <string name="Cod_Comerciant">Cod Comerciant</string>
    <string name="Data">Data</string>
    <string name="Suma">Suma</string>
    <string name="Type">Type</string>
    <string name="trader">Trader</string>
    <string name="merchant_code">Marchant_Code</string>
    <string name="transaction_date">dd/mm/yyyy</string>
    <string name="sum">suma</string>
    <string name="Transferabani">Transfera bani</string>
    <string name="title_activity_plati">PlatiActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="whotopay">Plata catre un prieten</string>
    <string name="Platacatreunprieten">Plata catre un prieten</string>
    <string name="prieteni">Prieteni</string>
    <string name="sumaplata">Introduceti suma . . .</string>
    <string name="detaliiPlata">Introduceti detaliile platii . . .</string>
    <string name="plateste">Plateste</string>
    <string name="sumaGresita">Trebuie sa introduceti o suma!</string>
    <string name="detaliiGresite">Trebuie sa introduceti detaliile platii!</string>
</resources>