<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFFFFF"
    android:paddingHorizontal="30dp"
    tools:context=".LoginActivity">
<ImageView
    android:id="@+id/homeBanking"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_marginLeft="100dp"
    android:layout_marginRight="100dp"
    android:layout_marginTop="10dp"
    android:src="@drawable/homebanking"
    android:contentDescription="@string/HomeBanking" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enterUserName"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:paddingStart="60dp"
            android:paddingEnd="0dp"
            android:inputType="textPersonName"
            android:autofillHints="@string/enterUserName"
            android:background="@drawable/rectangular_field"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/user"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/user"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enterPassword"
            android:paddingVertical="15dp"
            android:paddingStart="60dp"
            android:paddingEnd="0dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:autofillHints="@string/enterPassword"
            android:background="@drawable/rectangular_field"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/password1"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/password1"/>

    </RelativeLayout>
    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/signin"
        android:layout_marginTop="20dp"
        android:background="@drawable/culoare"
        android:textSize="25sp"
        android:gravity="center"
        android:textAllCaps="false"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notaccount"
        android:textColor="#000000"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginStart="10sp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000000"/>


</LinearLayout>


</LinearLayout>