<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="#FFFFFF"
    android:paddingHorizontal="30dp"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/homeBanking"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/homebanking"
        android:contentDescription="@string/HomeBanking" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enterEmailAdress"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:paddingStart="60dp"
            android:paddingEnd="0dp"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/enterEmailAdress"
            android:background="@drawable/rectangular_field"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/email"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/email"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enterUserName"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:paddingStart="60dp"
            android:paddingEnd="0dp"
            android:inputType="textPersonName"
            android:autofillHints="@string/enterUserName"
            android:background="@drawable/rectangular_field"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/user"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/user"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enterPassword"
            android:paddingVertical="15dp"
            android:paddingStart="60dp"
            android:paddingEnd="0dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:autofillHints="@string/enterPassword"
            android:background="@drawable/rectangular_field"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/password1"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/password1"/>

    </RelativeLayout>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/signup"
        android:layout_marginTop="20dp"
        android:background="@drawable/culoare"
        android:textSize="25sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textAllCaps="false"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="#000000"
            android:textSize="15sp"

            android:layout_marginEnd="0dp"
            />
        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="10sp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginEnd="50dp"/>


    </LinearLayout>


</LinearLayout>