<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_client_name"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/et_nume"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/nume">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_client_prenume"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/et_prenume"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/prenume">
            </EditText>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_client_CNP"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/et_CNP"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_CNP">
            </EditText>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:text="@string/label_data_emitere_CI"
                    android:layout_marginLeft="20dp">
                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:text="@string/label_data_expirare_CI"
                    android:layout_marginLeft="20dp"

                    >
                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                >

                <EditText
                    android:id="@+id/et_emision_date"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:hint="DD/MM/YYYY">
                </EditText>

                <EditText
                    android:id="@+id/et_expiration_date"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:hint="DD/MM/YYYY">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:text="@string/serie_CI"
                    android:layout_marginLeft="20dp">
                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:text="@string/numar_CI"
                    android:layout_marginLeft="20dp"

                    >
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                >

                <EditText
                    android:id="@+id/et_series"
                    android:layout_width="0dp"
                    android:layout_height="39dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:hint="XX">
                </EditText>

                <EditText
                    android:id="@+id/et_series_number"
                    android:layout_width="0dp"
                    android:layout_height="39dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:hint="123***"
                    >
                </EditText>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/birth_place"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />


            <EditText
                android:id="@+id/et_place_of_birth"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

               >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_venit"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />



            <EditText
                android:id="@+id/et_income"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ocupatie_principala"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />

            <EditText
                android:id="@+id/et_ocupation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/companie_client"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />

            <EditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tara_rezidente"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />

            <EditText
                android:id="@+id/et_country"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            </EditText>

          <!--  <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/detalii_tranzactionale"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />-->

           <!-- <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
            </EditText>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/telefon"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
            </EditText>

            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="Submit"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="5">
            </EditText>











        </LinearLayout>

    </ScrollView>




   <!-- <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="70dp"
        app:menu="@menu/bottom_navigation"
        android:background="?android:attr/windowBackground"/>-->

</RelativeLayout>